@@ -42,6 +42,9 @@ RADCLI_@LIBMAJOR@
 	rc_get_socket_type;
 	rc_read_dictionary;
 	rc_read_dictionary_from_buffer;
+	rc_dict_addattr;
+	rc_dict_addval;
+	rc_dict_addvend;
 	rc_dict_getattr;
 	rc_dict_findattr;
 	rc_dict_findval;
